add api for get all todays ap class sessions
